--- a/LD26/LD26.csproj
+++ b/LD26/LD26.csproj
@@ -6,7 +6,7 @@
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{DD1007C8-85DF-47EC-B7E5-E1D8D7481F53}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>LD26</RootNamespace>
     <AssemblyName>LD26</AssemblyName>
@@ -32,6 +32,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="sfmlnet-audio-2, Version=0.0.0.0, Culture=neutral, processorArchitecture=x86">
@@ -59,16 +62,19 @@
     <Compile Include="Entitys\Components\Component.cs" />
     <Compile Include="Entitys\Components\ScriptComponent.cs" />
     <Compile Include="Entitys\Components\Scripts\Player.cs" />
+    <Compile Include="Entitys\Components\Scripts\Solid.cs" />
     <Compile Include="Entitys\Components\SpriteComponent.cs" />
     <Compile Include="Entitys\Components\TransformComponent.cs" />
     <Compile Include="Entitys\Entity.cs" />
     <Compile Include="Entitys\EntityFactory.cs" />
+    <Compile Include="Helpers\Global.cs" />
     <Compile Include="Managers\EntityManager.cs" />
     <Compile Include="Managers\InputManager.cs" />
     <Compile Include="Managers\ResourceManager.cs" />
     <Compile Include="Managers\StateManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="States\LoadingState.cs" />
     <Compile Include="States\State.cs" />
     <Compile Include="States\TestState.cs" />
   </ItemGroup>
