--- a/LD26/LD26.csproj
+++ b/LD26/LD26.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Entitys\Components\ColiderComponent.cs" />
     <Compile Include="Entitys\Components\Component.cs" />
     <Compile Include="Entitys\Components\ScriptComponent.cs" />
+    <Compile Include="Entitys\Components\Scripts\Camera.cs" />
     <Compile Include="Entitys\Components\Scripts\Player.cs" />
     <Compile Include="Entitys\Components\Scripts\Solid.cs" />
     <Compile Include="Entitys\Components\SpriteComponent.cs" />
@@ -76,7 +77,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="States\LoadingState.cs" />
     <Compile Include="States\State.cs" />
-    <Compile Include="States\TestState.cs" />
+    <Compile Include="States\LevelState.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
