--- a/LD26/LD26.csproj
+++ b/LD26/LD26.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Entitys\Components\Component.cs" />
     <Compile Include="Entitys\Components\ScriptComponent.cs" />
     <Compile Include="Entitys\Components\Scripts\Camera.cs" />
+    <Compile Include="Entitys\Components\Scripts\LevelEnd.cs" />
     <Compile Include="Entitys\Components\Scripts\Player.cs" />
     <Compile Include="Entitys\Components\Scripts\Solid.cs" />
     <Compile Include="Entitys\Components\SpriteComponent.cs" />
@@ -69,6 +70,7 @@
     <Compile Include="Entitys\Entity.cs" />
     <Compile Include="Entitys\EntityFactory.cs" />
     <Compile Include="Helpers\Global.cs" />
+    <Compile Include="Helpers\Randomizer.cs" />
     <Compile Include="Managers\EntityManager.cs" />
     <Compile Include="Managers\InputManager.cs" />
     <Compile Include="Managers\ResourceManager.cs" />
